[tool.poetry]
name = "pytest-zebrunner"
version = "0.1.0"
description = "Pytest connector for Zebrunner reporting"
authors = ["Anatoliy Platonov <p4m.dev@gmail.com>"]
license = "Apache"
readme = "README.md"
homepage = "https://zebrunner.com/documentation/agents/pytest"
repository = "https://github.com/zebrunner/python-agent-pytest"
keywords = ["automation", "zebrunner", "testing"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.plugins.pytest11]
pytest-zebrunner = "pytest_zebrunner.plugin"


[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.1"
httpx = "^0.16.1"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.7.1"
pytest-cov = "^2.10.1"
selenium = "^3.141.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pytest_zebrunner"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
